2011-09-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c src/graph3d.c src/graphics.c:  User-specified axis tick
	labels should override auto-generated tick labels in 3D plots just as
	they already do in 2D plots.

	* src/plot2d.c: In `plot with labels`, skip labels for which the x,y
	coordinates are UNDEFINED.
	Bug #3415454

2011-09-27  Ethan A Merritt  <merritt@u.washington.edu>

	* term/emf.trm term/fig.trm term/metapost.trm term/tgif.trm:
	Prefer the new syntax set term ... font "<name>,<size>"   in the
	documentation. This does not change the terminal input, only the docs
	and the options string echoed back by "show term".

	* term/canvas.trm:  Implement set term canvas ... font "<name>,<size>".
	Currently the name is ignored.  

2011-09-23  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc src/plot2d.c:  Defer interpretation of newhistogram
	linetype until the histogram itself is drawn.

2011-09-21  Bastian Maerkisch  <bmaerkisch@web.de>

	* demo/borders.dem: Use loop instead of `reread`.

	* demo/image2.dem: Explicitely `reverse` axes.

	* src/win/wgraph.c (drawhraph) [W_filled_polygon_draw]: Transparent
	pattern fill actually fills with white background since 2011-05-15.
	Fixed.

	* src/win/wgnuplib.h src/win/wgraph.c (WndGraphProc) term/win.trm
	(WIN_options, WIN_update_options): Update term options on changes via
	graph window/menu. Track font face and size as read from ini-file.

	* src/stdfn.c|h (gp_basename) term/pslatex.trm (PSTEX_common_init):
	Move code from pslatex.trm to new function gp_basename which takes
	two different directory separators into account and does not change
	its argument.

2011-09-16  Peter Hedwig <peter@affenbande.org>

	* term/lua/gnuplot-tikz.lua:  Modify the commands used for rgb color 
	selection so that they are compatible with context as well as tikz.
	Bug #3401068

2011-09-16  Oliver Jennrich

	* term/lua/gnuplot-tikz.lua:  Update syntax used for setting line join
	properties.
	Bug #3410554
